# simulation-rock_gazebo

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  gazebo_sources.xml  manifest.xml
bindings/ruby/: CMakeLists.txt  path_to_plugin.rb.in
bindings/ruby/lib/: rock_gazebo.rb
bindings/ruby/lib/rock/: gazebo.rb
bindings/ruby/lib/rock/gazebo/: viz.rb
bindings/ruby/lib/rock_gazebo/: orogen_model_from_sdf_world.rb  syskit.rb  test.rb  viz.rb
bindings/ruby/lib/rock_gazebo/syskit/: configuration_extension.rb  instance_requirements_extension.rb  master_device_instance_extension.rb  profile_extension.rb  robot_definition_extension.rb  sdf.rb  test.rb  world.rb  world_manager.rb
bindings/ruby/lib/rock_gazebo/syskit/cucumber/: world.rb
bindings/ruby/test/: helpers.rb  suite.rb  suite_syskit.rb  test_orogen_model_from_sdf_world.rb  test_plugin.rb
bindings/ruby/test/data/: multi_world.sdf  no_world.sdf  test.world
bindings/ruby/test/syskit/: test_sdf.rb  test_world.rb  test_world_manager.rb
bindings/ruby/test/worlds/: gps-far-from-origin.world  gps-noise.world  gps.world  imu.world  model.world
force_plugin/: .cproject  .project  CMakeLists.txt
force_plugin/src/: gazebo_plugin_force.cpp  gazebo_plugin_force.hpp
pose_plugin/: .cproject  .project  CMakeLists.txt
pose_plugin/src/: gazebo_plugin_pose.cpp
src/: CMakeLists.txt  RockBridge.cpp  RockBridge.hpp  RockBridgePlugin.pc.in  rock-gazebo.in  rock-gzserver.in
test/world/: simple_robot.sdf  simple_robot.world  underwater.world
test/world/flatfish/: README  model.config  model.sdf
velocity_plugin/: .cproject  .project  CMakeLists.txt
velocity_plugin/src/: gazebo_plugin_velocity.cpp  gazebo_plugin_velocity.hpp
